@@ -59,7 +59,7 @@ namespace MeGUI.core.gui
             groupBox1.Dock = System.Windows.Forms.DockStyle.Fill;
             groupBox1.Location = new System.Drawing.Point(4, 28);
             groupBox1.Name = "groupBox1";
-            groupBox1.Size = new System.Drawing.Size(276, 201);
+            groupBox1.Size = new System.Drawing.Size(635, 201);
             groupBox1.TabIndex = 33;
             groupBox1.TabStop = false;
             groupBox1.Text = "Worker-Local Queue";
@@ -71,7 +71,7 @@ namespace MeGUI.core.gui
             this.jobQueue1.Name = "jobQueue1";
             this.jobQueue1.Padding = new System.Windows.Forms.Padding(2);
             this.jobQueue1.PauseResumeMode = MeGUI.core.gui.PauseResumeMode.Disabled;
-            this.jobQueue1.Size = new System.Drawing.Size(270, 155);
+            this.jobQueue1.Size = new System.Drawing.Size(629, 155);
             this.jobQueue1.StartStopMode = MeGUI.core.gui.StartStopMode.Start;
             this.jobQueue1.TabIndex = 0;
             this.jobQueue1.AbortClicked += new System.EventHandler(this.jobQueue1_AbortClicked);
@@ -86,7 +86,7 @@ namespace MeGUI.core.gui
             this.panel1.Dock = System.Windows.Forms.DockStyle.Bottom;
             this.panel1.Location = new System.Drawing.Point(3, 172);
             this.panel1.Name = "panel1";
-            this.panel1.Size = new System.Drawing.Size(270, 26);
+            this.panel1.Size = new System.Drawing.Size(629, 26);
             this.panel1.TabIndex = 2;
             // 
             // progressLabel
@@ -103,13 +103,13 @@ namespace MeGUI.core.gui
             // 
             // jobProgress
             // 
-            this.jobProgress.Anchor = ((System.Windows.Forms.AnchorStyles)((((System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Bottom)
-                        | System.Windows.Forms.AnchorStyles.Left)
-                        | System.Windows.Forms.AnchorStyles.Right)));
+            this.jobProgress.Anchor = ((System.Windows.Forms.AnchorStyles)((((System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Bottom) 
+            | System.Windows.Forms.AnchorStyles.Left) 
+            | System.Windows.Forms.AnchorStyles.Right)));
             this.jobProgress.Location = new System.Drawing.Point(58, 3);
             this.jobProgress.Margin = new System.Windows.Forms.Padding(0);
             this.jobProgress.Name = "jobProgress";
-            this.jobProgress.Size = new System.Drawing.Size(212, 23);
+            this.jobProgress.Size = new System.Drawing.Size(571, 23);
             this.jobProgress.TabIndex = 30;
             // 
             // helpButton1
@@ -130,7 +130,7 @@ namespace MeGUI.core.gui
             this.flowLayoutPanel2.Dock = System.Windows.Forms.DockStyle.Bottom;
             this.flowLayoutPanel2.Location = new System.Drawing.Point(4, 229);
             this.flowLayoutPanel2.Name = "flowLayoutPanel2";
-            this.flowLayoutPanel2.Size = new System.Drawing.Size(276, 29);
+            this.flowLayoutPanel2.Size = new System.Drawing.Size(635, 29);
             this.flowLayoutPanel2.TabIndex = 36;
             // 
             // menuStrip1
@@ -140,7 +140,7 @@ namespace MeGUI.core.gui
             this.progressWindowToolStripMenuItem});
             this.menuStrip1.Location = new System.Drawing.Point(4, 4);
             this.menuStrip1.Name = "menuStrip1";
-            this.menuStrip1.Size = new System.Drawing.Size(276, 24);
+            this.menuStrip1.Size = new System.Drawing.Size(635, 24);
             this.menuStrip1.TabIndex = 37;
             this.menuStrip1.Text = "menuStrip1";
             // 
@@ -159,27 +159,27 @@ namespace MeGUI.core.gui
             // 
             this.changeNameToolStripMenuItem.Name = "changeNameToolStripMenuItem";
             this.changeNameToolStripMenuItem.ShortcutKeys = System.Windows.Forms.Keys.F2;
-            this.changeNameToolStripMenuItem.Size = new System.Drawing.Size(272, 22);
+            this.changeNameToolStripMenuItem.Size = new System.Drawing.Size(311, 22);
             this.changeNameToolStripMenuItem.Text = "Change name";
             this.changeNameToolStripMenuItem.Click += new System.EventHandler(this.changeNameToolStripMenuItem_Click);
             // 
             // toolStripSeparator1
             // 
             this.toolStripSeparator1.Name = "toolStripSeparator1";
-            this.toolStripSeparator1.Size = new System.Drawing.Size(269, 6);
+            this.toolStripSeparator1.Size = new System.Drawing.Size(308, 6);
             // 
             // shutDownWhenFinishedLocalQueueToolStripMenuItem
             // 
             this.shutDownWhenFinishedLocalQueueToolStripMenuItem.Name = "shutDownWhenFinishedLocalQueueToolStripMenuItem";
-            this.shutDownWhenFinishedLocalQueueToolStripMenuItem.Size = new System.Drawing.Size(272, 22);
-            this.shutDownWhenFinishedLocalQueueToolStripMenuItem.Text = "Shut down when finished local queue";
+            this.shutDownWhenFinishedLocalQueueToolStripMenuItem.Size = new System.Drawing.Size(311, 22);
+            this.shutDownWhenFinishedLocalQueueToolStripMenuItem.Text = "Shut down worker when finished local queue";
             this.shutDownWhenFinishedLocalQueueToolStripMenuItem.Click += new System.EventHandler(this.shutDownWhenFinishedLocalQueueToolStripMenuItem_Click);
             // 
             // shutDownWorkerNowToolStripMenuItem
             // 
             this.shutDownWorkerNowToolStripMenuItem.Name = "shutDownWorkerNowToolStripMenuItem";
             this.shutDownWorkerNowToolStripMenuItem.ShortcutKeys = ((System.Windows.Forms.Keys)((System.Windows.Forms.Keys.Control | System.Windows.Forms.Keys.W)));
-            this.shutDownWorkerNowToolStripMenuItem.Size = new System.Drawing.Size(272, 22);
+            this.shutDownWorkerNowToolStripMenuItem.Size = new System.Drawing.Size(311, 22);
             this.shutDownWorkerNowToolStripMenuItem.Text = "Shut down worker now";
             this.shutDownWorkerNowToolStripMenuItem.Click += new System.EventHandler(this.shutDownWorkerNowToolStripMenuItem_Click);
             // 
@@ -203,7 +203,7 @@ namespace MeGUI.core.gui
             // 
             this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
-            this.ClientSize = new System.Drawing.Size(284, 262);
+            this.ClientSize = new System.Drawing.Size(643, 262);
             this.Controls.Add(groupBox1);
             this.Controls.Add(this.flowLayoutPanel2);
             this.Controls.Add(this.menuStrip1);
