@@ -192,7 +192,15 @@ namespace MeGUI
                 try
                 {
                     File.Delete(executable);
-                    log.LogEvent("Because of an error the file " + executable + " has been deleted.", ImageType.Warning);
+                    log.LogEvent("Because of an error in job processing the file " + executable + " has been deleted.", ImageType.Warning);
+                    if (MainForm.Instance.Settings.AutoUpdate)
+                    {
+                        log.LogEvent("Starting update detection in order to redownload the file.", ImageType.Warning);
+                        // Need a seperate thread to run the updater to stop internet lookups from freezing the app.
+                        Thread updateCheck = new Thread(new ThreadStart(MainForm.Instance.beginUpdateCheck));
+                        updateCheck.IsBackground = true;
+                        updateCheck.Start();
+                    }
                 }
                 catch (IOException)
                 {
